objects/Utilization__c.object
<CustomObject>
    <fields>
        <fullName>Referring_Physician_Report__c</fullName>
        <label>Referring Physician Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <formula>DATEVALUE( TEXT(Year__c) &amp; &quot;-&quot; &amp;  TEXT(Month_Num__c)  &amp; &quot;-1&quot;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Date_del__c</fullName>
        <formula>DATEVALUE( TEXT(Year__c) &amp; &quot;-&quot; &amp;  TEXT(Month_Num__c)  &amp; &quot;-1&quot;  )</formula>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reports_on_Visit_Reports__c</fullName>
        <label>Reports on Visit Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rounding_against_Census__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>% Rounding against Census</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Searches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Fees__c</fullName>
        <label>Self-Insured Fees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Line_Leakage_Report__c</fullName>
        <label>Service Line Leakage Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Recovery_Rounds__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Service Recovery Rounds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialist_Offline_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Specialist Offline Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialist_Online_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Specialist Online Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialist_Practices__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Specialist Practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialist_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Specialist Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialist_Users__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Specialist Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splitter_data_Visits__c</fullName>
        <label>Splitter data Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stand_alone_Visit_Reports__c</fullName>
        <label>Stand-alone Visit Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Population_Fees__c</fullName>
        <label>Standard Population Fees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Open__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Time-To-Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ANR__c</fullName>
        <label>Total ANR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Logins__c</fullName>
        <label>Total Logins</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rounds__c</fullName>
        <description>Created for CR-20160226-9647</description>
        <label>Total Rounds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Visit_Reports__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Total Visit Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unclaimed_Physicians__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Unclaimed Physicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unopened_Referrals_Received__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Unopened Referrals Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unopened_Referrals_Sent__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Unopened Referrals Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Utilization External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilization_Tab_Visits__c</fullName>
        <label>Utilization Tab Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Report__c</fullName>
        <label>Visit Report Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Reports_tied_to_Initiatives__c</fullName>
        <label>Visit Reports tied to Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_report_Created__c</fullName>
        <label>Visit report Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_App_Member_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Web App Member Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iPad_Member_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>iPad Member Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iPad_Member_Users__c</fullName>
        <description>created as part of CR 3433</description>
        <label>iPad Member Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_Custom_Metrics__c</fullName>
        <label># of Custom Metrics</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Active_Super_Users__c</fullName>
        <description>CR-20120927-1556</description>
        <label># of Active Super Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Crimson_Reports_Generated__c</fullName>
        <description>created as part of CR 3433</description>
        <label># of Crimson Reports Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Crimson_User_logins__c</fullName>
        <label># of Crimson User logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Custom_Metrics_30__c</fullName>
        <formula>IF( Measure_Library__c &gt;30,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Custom Metrics &gt; 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Initiative_visits__c</fullName>
        <label># of Initiative visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_On_Demand_Reports_Viewed__c</fullName>
        <label># of On-Demand Reports Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Referrals_With_Response__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>% of Referrals With Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Self_Service_Users__c</fullName>
        <description>CR-20120927-1556</description>
        <label># of Self-Service Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Times_On_Demand_Accessed__c</fullName>
        <label># of Times On-Demand Accessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Unique_Physician_Profiles_Viewed__c</fullName>
        <label># of Unique Physician Profiles Viewed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Users_Accessing_On_Demand__c</fullName>
        <label># of Users Accessing On-Demand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PTD Utilization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Reporting_Date_del__c</columns>
        <columns>Project__c</columns>
        <columns>Avg_of_Logins_per_Act_User_per_Mem__c</columns>
        <columns>Avg_of_Logins_per_Member__c</columns>
        <columns>Avg_of_Super_User_Logins__c</columns>
        <columns>Date__c</columns>
        <columns>Month__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CMA</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCC_Utilization</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Reporting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>contains</operation>
            <value>CCC,BIPC</value>
        </filters>
        <label>CCC Utilization</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPRM_Utilization</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Utilization__c.CPRM</value>
        </filters>
        <label>CPRM Utilization</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Example</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Reporting_Date_del__c</columns>
        <columns>Project__c</columns>
        <columns>Avg_of_Logins_per_Act_User_per_Mem__c</columns>
        <columns>Avg_of_Logins_per_Member__c</columns>
        <columns>Avg_of_Super_User_Logins__c</columns>
        <columns>Date__c</columns>
        <columns>Month__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>startsWith</operation>
            <value>Adventist Health - Roseville - CRIM-CPM</value>
        </filters>
        <label>Example</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PT_Records</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Utilization__c.PT</value>
        </filters>
        <label>PT Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Utilization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTD Utilization</pluralLabel>
    <recordTypes>
        <fullName>CCC</fullName>
        <active>true</active>
        <description>Record Type to Track data for CCC Utilization</description>
        <label>CCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMA</fullName>
        <active>true</active>
        <label>CMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMR</fullName>
        <active>true</active>
        <label>CMR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPRM</fullName>
        <active>true</active>
        <label>CPRM</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT</fullName>
        <active>true</active>
        <description>Performance Technology</description>
        <label>PT</label>
    </recordTypes>
    <recordTypes>
        <fullName>iRound</fullName>
        <active>true</active>
        <description>Record type used to track member utilization of iRound</description>
        <label>iRound</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>